src/java/malea/PreprocessorParser.java
// $ANTLR ANTLRVersion> PreprocessorParser.java generatedTimestamp>

	package malea;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PreprocessorParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Titleize=13, Pipe=19, CapitalizedLetters=10, AnyOtherChar=20, HtmlTag=6, 
		OpenSquareBracket=16, NestedMetadata=1, Ellipsis=9, Emphasis=7, NonBreakSpace=11, 
		UnorderedList=12, ColonDoubleForwardSlash=18, DoubleCloseSquareBracket=15, 
		WhiteSpace=8, NestedTable=2, ReferenceTag=4, PreformattedTag=5, CloseSquareBracket=17, 
		DoubleOpenSquareBracket=14, CategoryTag=3;
	public static final String[] tokenNames = {
		"<INVALID>", "NestedMetadata", "NestedTable", "CategoryTag", "ReferenceTag", 
		"PreformattedTag", "HtmlTag", "Emphasis", "WhiteSpace", "Ellipsis", "CapitalizedLetters", 
		"'&nbsp;'", "UnorderedList", "Titleize", "'[['", "']]'", "'['", "']'", 
		"'://'", "'|'", "AnyOtherChar"
	};
	public static final int
		RULE_preprocess = 0, RULE_annotation = 1, RULE_hyperlink = 2;
	public static final String[] ruleNames = {
		"preprocess", "annotation", "hyperlink"
	};

	@Override
	public String getGrammarFileName() { return "PreprocessorParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public PreprocessorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PreprocessContext extends ParserRuleContext {
		public String preprocessed;
		public AnnotationContext a;
		public HyperlinkContext b;
		public Token c;
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public HyperlinkContext hyperlink(int i) {
			return getRuleContext(HyperlinkContext.class,i);
		}
		public List<HyperlinkContext> hyperlink() {
			return getRuleContexts(HyperlinkContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public TerminalNode EOF() { return getToken(PreprocessorParser.EOF, 0); }
		public PreprocessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preprocess; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreprocessorParserListener ) ((PreprocessorParserListener)listener).enterPreprocess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreprocessorParserListener ) ((PreprocessorParserListener)listener).exitPreprocess(this);
		}
	}

	public final PreprocessContext preprocess() throws RecognitionException {
		PreprocessContext _localctx = new PreprocessContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_preprocess);
		 StringBuilder buffer = new StringBuilder(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NestedMetadata) | (1L << NestedTable) | (1L << CategoryTag) | (1L << ReferenceTag) | (1L << PreformattedTag) | (1L << HtmlTag) | (1L << Emphasis) | (1L << WhiteSpace) | (1L << Ellipsis) | (1L << CapitalizedLetters) | (1L << NonBreakSpace) | (1L << UnorderedList) | (1L << Titleize) | (1L << DoubleOpenSquareBracket) | (1L << DoubleCloseSquareBracket) | (1L << OpenSquareBracket) | (1L << CloseSquareBracket) | (1L << ColonDoubleForwardSlash) | (1L << Pipe) | (1L << AnyOtherChar))) != 0)) {
				{
				setState(14);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(6); ((PreprocessContext)_localctx).a = annotation();
					 buffer.append(((PreprocessContext)_localctx).a.text); 
					}
					break;

				case 2:
					{
					setState(9); ((PreprocessContext)_localctx).b = hyperlink();
					 buffer.append(((PreprocessContext)_localctx).b.text); 
					}
					break;

				case 3:
					{
					setState(12);
					((PreprocessContext)_localctx).c = matchWildcard();
					 buffer.append((((PreprocessContext)_localctx).c!=null?((PreprocessContext)_localctx).c.getText():null)); 
					}
					break;
				}
				}
				setState(18);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(19); match(EOF);
			 ((PreprocessContext)_localctx).preprocessed =  buffer.toString(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationContext extends ParserRuleContext {
		public String text;
		public AnnotationContext b;
		public Token a;
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public TerminalNode Pipe(int i) {
			return getToken(PreprocessorParser.Pipe, i);
		}
		public List<TerminalNode> DoubleCloseSquareBracket() { return getTokens(PreprocessorParser.DoubleCloseSquareBracket); }
		public List<TerminalNode> Pipe() { return getTokens(PreprocessorParser.Pipe); }
		public TerminalNode DoubleOpenSquareBracket(int i) {
			return getToken(PreprocessorParser.DoubleOpenSquareBracket, i);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public TerminalNode DoubleCloseSquareBracket(int i) {
			return getToken(PreprocessorParser.DoubleCloseSquareBracket, i);
		}
		public List<TerminalNode> DoubleOpenSquareBracket() { return getTokens(PreprocessorParser.DoubleOpenSquareBracket); }
		public AnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreprocessorParserListener ) ((PreprocessorParserListener)listener).enterAnnotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreprocessorParserListener ) ((PreprocessorParserListener)listener).exitAnnotation(this);
		}
	}

	public final AnnotationContext annotation() throws RecognitionException {
		AnnotationContext _localctx = new AnnotationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_annotation);
		 StringBuilder buffer = new StringBuilder(); 
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(22); match(DoubleOpenSquareBracket);
			setState(36);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(29); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
					do {
						switch (_alt) {
						case 1:
							{
							setState(29);
							switch (_input.LA(1)) {
							case DoubleOpenSquareBracket:
								{
								setState(23); annotation();
								}
								break;
							case NestedMetadata:
							case NestedTable:
							case CategoryTag:
							case ReferenceTag:
							case PreformattedTag:
							case HtmlTag:
							case Emphasis:
							case WhiteSpace:
							case Ellipsis:
							case CapitalizedLetters:
							case NonBreakSpace:
							case UnorderedList:
							case Titleize:
							case OpenSquareBracket:
							case CloseSquareBracket:
							case ColonDoubleForwardSlash:
							case Pipe:
							case AnyOtherChar:
								{
								setState(25); 
								_errHandler.sync(this);
								_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
								do {
									switch (_alt) {
									case 1:
										{
										{
										setState(24);
										_la = _input.LA(1);
										if ( _la <= 0 || (_la==DoubleOpenSquareBracket || _la==DoubleCloseSquareBracket) ) {
										_errHandler.recoverInline(this);
										}
										consume();
										}
										}
										break;
									default:
										throw new NoViableAltException(this);
									}
									setState(27); 
									_errHandler.sync(this);
									_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
								} while ( _alt!=2 && _alt!=-1 );
								}
								break;
							default:
								throw new NoViableAltException(this);
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(31); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
					} while ( _alt!=2 && _alt!=-1 );
					setState(33); match(Pipe);
					}
					} 
				}
				setState(38);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(48); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			do {
				switch (_alt) {
				case 1+1:
					{
					setState(48);
					switch (_input.LA(1)) {
					case DoubleOpenSquareBracket:
						{
						setState(39); ((AnnotationContext)_localctx).b = annotation();
						 buffer.append(((AnnotationContext)_localctx).b.text); 
						}
						break;
					case NestedMetadata:
					case NestedTable:
					case CategoryTag:
					case ReferenceTag:
					case PreformattedTag:
					case HtmlTag:
					case Emphasis:
					case WhiteSpace:
					case Ellipsis:
					case CapitalizedLetters:
					case NonBreakSpace:
					case UnorderedList:
					case Titleize:
					case OpenSquareBracket:
					case CloseSquareBracket:
					case ColonDoubleForwardSlash:
					case Pipe:
					case AnyOtherChar:
						{
						setState(44); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
						do {
							switch (_alt) {
							case 1:
								{
								{
								setState(42);
								((AnnotationContext)_localctx).a = _input.LT(1);
								_la = _input.LA(1);
								if ( _la <= 0 || (_la==DoubleOpenSquareBracket || _la==DoubleCloseSquareBracket) ) {
									((AnnotationContext)_localctx).a = (Token)_errHandler.recoverInline(this);
								}
								consume();
								 buffer.append((((AnnotationContext)_localctx).a!=null?((AnnotationContext)_localctx).a.getText():null)); 
								}
								}
								break;
							default:
								throw new NoViableAltException(this);
							}
							setState(46); 
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
						} while ( _alt!=2 && _alt!=-1 );
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(50); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=1 && _alt!=-1 );
			setState(52); match(DoubleCloseSquareBracket);
			 ((AnnotationContext)_localctx).text =  buffer.toString(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HyperlinkContext extends ParserRuleContext {
		public String text;
		public Token a;
		public TerminalNode CloseSquareBracket(int i) {
			return getToken(PreprocessorParser.CloseSquareBracket, i);
		}
		public TerminalNode ColonDoubleForwardSlash() { return getToken(PreprocessorParser.ColonDoubleForwardSlash, 0); }
		public List<TerminalNode> WhiteSpace() { return getTokens(PreprocessorParser.WhiteSpace); }
		public List<TerminalNode> CloseSquareBracket() { return getTokens(PreprocessorParser.CloseSquareBracket); }
		public TerminalNode WhiteSpace(int i) {
			return getToken(PreprocessorParser.WhiteSpace, i);
		}
		public TerminalNode OpenSquareBracket() { return getToken(PreprocessorParser.OpenSquareBracket, 0); }
		public HyperlinkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hyperlink; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreprocessorParserListener ) ((PreprocessorParserListener)listener).enterHyperlink(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreprocessorParserListener ) ((PreprocessorParserListener)listener).exitHyperlink(this);
		}
	}

	public final HyperlinkContext hyperlink() throws RecognitionException {
		HyperlinkContext _localctx = new HyperlinkContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_hyperlink);
		 StringBuilder buffer = new StringBuilder(); 
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(55); match(OpenSquareBracket);
			setState(57); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			do {
				switch (_alt) {
				case 1+1:
					{
					{
					setState(56);
					_la = _input.LA(1);
					if ( _la <= 0 || (_la==WhiteSpace) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(59); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			} while ( _alt!=1 && _alt!=-1 );
			setState(61); match(ColonDoubleForwardSlash);
			setState(63); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(62);
				_la = _input.LA(1);
				if ( _la <= 0 || (_la==WhiteSpace) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				}
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NestedMetadata) | (1L << NestedTable) | (1L << CategoryTag) | (1L << ReferenceTag) | (1L << PreformattedTag) | (1L << HtmlTag) | (1L << Emphasis) | (1L << Ellipsis) | (1L << CapitalizedLetters) | (1L << NonBreakSpace) | (1L << UnorderedList) | (1L << Titleize) | (1L << DoubleOpenSquareBracket) | (1L << DoubleCloseSquareBracket) | (1L << OpenSquareBracket) | (1L << CloseSquareBracket) | (1L << ColonDoubleForwardSlash) | (1L << Pipe) | (1L << AnyOtherChar))) != 0) );
			setState(68); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(67); match(WhiteSpace);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(70); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			setState(76);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=1 && _alt!=-1 ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(72);
					((HyperlinkContext)_localctx).a = _input.LT(1);
					_la = _input.LA(1);
					if ( _la <= 0 || (_la==CloseSquareBracket) ) {
						((HyperlinkContext)_localctx).a = (Token)_errHandler.recoverInline(this);
					}
					consume();
					 buffer.append((((HyperlinkContext)_localctx).a!=null?((HyperlinkContext)_localctx).a.getText():null)); 
					}
					} 
				}
				setState(78);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(79); match(CloseSquareBracket);
			 ((HyperlinkContext)_localctx).text =  buffer.toString(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		ATNSimulator.deserialize(_serializedATN.toCharArray());
	static {
	    _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
	}
}